# KuramotoNeuralSimulations

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebooks/: 01_basic_kuramoto.ipynb  02_spatial_kernels.ipynb  03_adjoint_spatial_sensitivities.ipynb  04_network_analysis.ipynb  05_metric_comparison.ipynb  06_lesion_studies.ipynb  06_lesion_study_demo.ipynb  07_lesion_studies.ipynb  08_brain_connectome_metrics.ipynb  09_brain_connectome_lesion_study.ipynb
kuramoto/: __init__.py  adjoint.py  analysis.py  config.py  coupling.py  experiments.py  grid.py  kernels.py  network.py  plotting.py  simulation.py  storage.py
scripts/: benchmark_simulation.py  demo_adjoint_spatial.py  demo_forward_spatial.py  demo_forward_uniform.py  demo_hetero_adjoint_gaussian_sigma.py  demo_heterogeneous_coupling.py  demo_node_lesion_importance.py
